--- a/psu/docker-compose.yml
+++ b/psu/docker-compose.yml
@@ -3,21 +3,30 @@ version: '1'
 services:
   mysql:
     image:
+      mysql
     environment:
+      MYSQL_ROOT_PASSWORD=123456
+      MYSQL_DATABASE=openoni
+      MYSQL_USER=openoni
+      MYSQL_PASSWORD=openoni
     volumes:
-    ports:
+      - openoni-dev-data-mysql:/var/lib/mysql
+      - /$(pwd)/docker/mysql:/etc/mysql/conf.d:Z
   solr:
     image:
     environment:
     volumes:
-    ports:
   rais:
     image:
     environment:
     volumes:
-    ports:
   openoni:
     image:
     environment:
     volumes:
     ports:
+      - "80"
+    links:
+      - mysql
+      - solr
+      - rais
