--- a/psu/docker-compose.yml
+++ b/psu/docker-compose.yml
@@ -3,7 +3,7 @@ version: '1'
 services:
   mysql:
     image:
-      mysql
+      mysql:latest
     environment:
       MYSQL_ROOT_PASSWORD=123456
       MYSQL_DATABASE=openoni
